# nearby-rs

./: .gitignore  Cargo.toml  NOTICE  README.md  build.rs
.github/workflows/: ci.yml
proto/: offline_wire_formats.proto
src/: frames.rs  lib.rs  mediums.rs  proto.rs  validator.rs
src/bwu/: actor.rs  channel.rs  channel_manager.rs  client.rs  handler.rs  manager.rs  mod.rs  service_id.rs  stream_channel.rs  tcp.rs  testing.rs  wifi_hotspot.rs  wifi_lan.rs
tests/: bwu_actor.rs  bwu_manager.rs  bwu_retry.rs  offline_frames.rs  offline_frames_validator.rs  stream_channel.rs  wifi_hotspot.rs  wifi_lan.rs  wifi_lan_actor.rs
