[package]
name = "nearby-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "A faithful, test-first Rust port of Google's Nearby Connections protocol (wire format + bandwidth-upgrade subsystem)."
repository = "https://github.com/joeleaver/nearby-rs"
readme = "README.md"
keywords = ["nearby", "quick-share", "protocol", "p2p"]
categories = ["network-programming", "encoding"]
exclude = [".github/"]

[dependencies]
prost = "0.13"

[build-dependencies]
prost-build = "0.13"
