[package]
name = "nearby-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "A faithful, test-first Rust port of Google's Nearby Connections protocol (wire format + bandwidth-upgrade subsystem)."
repository = "https://github.com/joeleaver/nearby-rs"
readme = "README.md"
keywords = ["nearby", "quick-share", "protocol", "p2p"]
categories = ["network-programming", "encoding"]
exclude = [".github/"]

[features]
# Enables the Tokio integration actor (`bwu::actor`) that serializes access to
# the synchronous BwuManager and drives the retry timer. The core crate is
# runtime-agnostic; this feature is the only thing that pulls in Tokio.
tokio = ["dep:tokio"]

[dependencies]
prost = "0.13"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"], optional = true }

[dev-dependencies]
# `test-util` provides the paused-clock helpers the actor tests use.
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "test-util"] }

[build-dependencies]
prost-build = "0.13"
